hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tarray.php.exp
File "tarray.php", line 7, characters 10-14:
Invalid return type (Typing[4110])
  File "tarray.php", line 6, characters 19-29:
  Expected `vec<int>`
  File "tarray.php", line 4, characters 17-23:
  But got `dynamic`
File "tarray.php", line 11, characters 10-14:
Invalid return type (Typing[4110])
  File "tarray.php", line 10, characters 19-37:
  Expected `dict<int, string>`
  File "tarray.php", line 4, characters 17-23:
  But got `dynamic`
